--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-maps": "1.7.1",
     "react-native-reanimated": "~3.3.0",
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "vector-icons": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
